added error handler in client.py

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-PARQUET_FILE=trades.parquet
-SPEED=10.0
+# Path to your Parquet file (relative or absolute)
+PARQUET_FILE=trades_sample.parquet
+
+# Replay speed factor:
+SPEED=1.0
+
+# Minimum delay between sending batches (seconds)
+MIN_DELAY=0.5
